--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next-resources-to-backend": "^1.2.1",
     "next": "15.3.0",
     "next-i18next": "^15.4.2",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "yup": "^1.6.1"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
