--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "formik": "^2.4.6",
@@ -16,6 +17,7 @@
     "i18next-resources-to-backend": "^1.2.1",
     "next": "15.3.0",
     "next-i18next": "^15.4.2",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
