--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "i18next-resources-to-backend": "^1.2.1",
-    "next": "15.3.0",
+    "mysql2": "^3.15.3",
+    "next": "^15.5.6",
     "next-i18next": "^15.4.2",
     "next-sitemap": "^4.2.3",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^6.3.0",
+    "sequelize": "^6.37.7",
     "yup": "^1.6.1"
   },
   "devDependencies": {
